Um método query adicionado para cada modelo

--- a/RecDesp/RecDesp/appsettings.json
+++ b/RecDesp/RecDesp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;DataBase=rec_desp;Uid=root;Pwd="
+    "DefaultConnection": "Server=localhost;DataBase=rec_desp;Uid=root;Pwd=lipe14clarinha"
   },
   "Logging": {
     "LogLevel": {
